Bug 26496 - Jar protocol fails silently on file-not-found.  r=darin, sr=bz